# EventEngine

./: .clang-format  CMakeLists.txt  README.md
benchmark/: benchmark_performance.cpp  benchmark_single_handle_compare.cpp  benchmark_sync_async.cpp  benchmark_type_dispatch.cpp
core/include/event/: event.h  handler.h  manager.h
core/include/exe/: run.h
core/include/exe/runtime/: runtime.h
core/include/exe/runtime/asio/: runtime.h
core/include/exe/thread/: wait_group.h
core/src/event/: manager.cpp
core/src/exe/runtime/asio/: runtime.cpp
diploma/AutoSignatureGenerator/: Makefile
diploma/AutoSignatureGenerator/presentation/: Makefile  references.bib
diploma/AutoSignatureGenerator/thesis/: references.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.out  thesis.tex  thesis.toc
diploma/AutoSignatureGenerator/thesis/parts/: Annotation.tex  Section0.tex  Section1.tex  Section2_BuildSolution.tex  Section3.tex  Section4.tex
diploma/AutoSignatureGenerator/thesis/svg-inkscape/: autosig_svg-tex.pdf_tex  autosig_tree_svg-tex.pdf_tex  multiclassification_svg-tex.pdf_tex  signature_svg-tex.pdf_tex
diploma/AutoSignatureGenerator/thesis2/: references.bib  thesis.aux  thesis.bcf  thesis.fdb_latexmk  thesis.fls  thesis.out  thesis.run.xml  thesis.tex  thesis.toc
diploma/AutoSignatureGenerator/thesis2/include/: title.tex
diploma/AutoSignatureGenerator/thesis2/parts/: Section0.tex  Section1.tex  Section2_BuildSolution.tex  Section3.tex  Section4.tex
diploma/AutoSignatureGenerator/thesis2/svg-inkscape/: scheme_auto_signature_classifier_svg-tex.pdf_tex  scheme_auto_signature_classifier_v2_svg-tex.pdf_tex  scheme_auto_signature_generation_svg-tex.pdf_tex  scheme_auto_signature_generation_v2_svg-tex.pdf_tex
sandbox/: eventpp.cpp  eventpp.h  main.cpp  t1.cpp
